deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $dockerImageName
  namespace: $deploymentNamespace
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: $dockerImageName
